[package]
authors = ["Stjepan Glavina <stjepang@gmail.com>", "John Nunley <jtnunley01@gmail.com>"]
description = "Async pipes, channels, mutexes, and more."
edition = "2018"
license = "MIT OR Apache-2.0"
name = "piper"
repository = "https://github.com/notgull/piper"
version = "0.2.0"
rust-version = "1.36"

[features]
default = ["std"]
std = ["fastrand", "futures-io"]

[dependencies]
atomic-waker = "1.1.0"
fastrand = { version = "1.9.0", optional = true }
futures-io = { version = "0.3.28", optional = true }

[dev-dependencies]
async-channel = "1.8.0"
async-executor = "1.5.1"
async-io = "1.13.0"
easy-parallel = "3.2.0"
futures-lite = "1.12.0"
